<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".login">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="@dimen/liner_Padding"
        android:paddingRight="@dimen/liner_Padding"
        android:paddingTop="@dimen/liner_PaddingTop">

        <ImageView
            android:id="@+id/image_logo"
            android:layout_width="180dp"
            android:layout_height="@dimen/logo_height"
            android:layout_gravity="center"
            android:src="@drawable/logo" />


        <EditText
            android:id="@+id/input_username"
            android:layout_width="@dimen/usernameLogin_width"
            android:layout_height="match_parent"
            android:layout_marginBottom="@dimen/username_marginBottom"
            android:layout_marginLeft="@dimen/login_marginLeft"
            android:layout_marginTop="@dimen/username_marginTop"
            android:hint="@string/username_field"
            android:inputType="textPersonName"
            android:paddingTop="@dimen/username_PaddingTop"
            android:textAlignment="center" />

        <EditText
            android:id="@+id/input_password"
            android:layout_width="180dp"
            android:layout_height="match_parent"
            android:layout_marginBottom="8dp"
            android:layout_marginLeft="@dimen/login_marginLeft"
            android:layout_marginTop="8dp"
            android:hint="@string/password_field"
            android:inputType="textPassword"
            android:paddingLeft="45dp"
            android:paddingTop="45dp" />

        <Button
            android:id="@+id/btn_login"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:layout_marginTop="24dp"
            android:background="@color/colorlightRed"
            android:padding="12dp"
            android:text="@string/login_btn"
            android:textColor="@color/colorwhite" />




        <TextView
            android:id="@+id/signup"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:layout_marginLeft="@dimen/TextSignUpMargin"
            android:text="@string/signup_from_login"
            android:textSize="@dimen/TextSigUpSize"/>

        <Button
            android:id="@+id/btn_signup"
            android:layout_width="113dp"
            android:layout_height="50dp"
            android:background="@color/colorlightRed"
            android:text="@string/SignUpButton"
            android:layout_marginLeft="100dp"
            android:layout_marginBottom="60dp"
            android:textColor="@color/colorwhite"
            android:gravity="center"/>


    </LinearLayout>

</android.support.constraint.ConstraintLayout>