<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".Register">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="20dp"
        android:paddingLeft="@dimen/lin_layoutpaddingleftright_value"
        android:paddingRight="@dimen/lin_layoutpaddingleftright_value"
        >
        <ImageView
            android:id="@+id/restaurant"
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:layout_gravity="center"
            android:src="@drawable/logo"/>

        <EditText
            android:id="@+id/Username"
            android:layout_width="@dimen/txtlayoutW_value"
            android:layout_height="match_parent"
            android:layout_marginBottom="@dimen/txtlayoutMrgTopBot_value"
            android:layout_marginTop="@dimen/txtlayoutMrgTopBot_value"
            android:layout_marginLeft="@dimen/txtlayoutMrgLeft_value"
            android:textAlignment="center"
            android:ems="10"
            android:inputType="textPersonName"
            android:hint="@string/reg_usr"
            android:padding="15dp"/>

        <EditText
            android:id="@+id/Password"
            android:layout_width="@dimen/txtlayoutW_value"
            android:layout_height="match_parent"
            android:layout_marginBottom="@dimen/txtlayoutMrgTopBot_value"
            android:layout_marginTop="@dimen/txtlayoutMrgTopBot_value"
            android:layout_marginLeft="@dimen/txtlayoutMrgLeft_value"
            android:ems="10"
            android:inputType="textPassword"
            android:hint="@string/reg_pass"
            android:paddingTop="@dimen/txtlayoutpadding_value"
            android:textAlignment="center"

            />


        <EditText
            android:id="@+id/E_mail"
            android:layout_width="@dimen/txtlayoutW_value"
            android:layout_height="match_parent"
            android:layout_marginBottom="@dimen/txtlayoutMrgTopBot_value"
            android:layout_marginTop="@dimen/txtlayoutMrgTopBot_value"
            android:layout_marginLeft="@dimen/txtlayoutMrgLeft_value"
            android:textAlignment="center"
            android:ems="10"
            android:inputType="textEmailAddress"
            android:paddingTop="@dimen/txtlayoutpadding_value"
            android:hint="@string/reg_mail"/>

        <EditText
            android:id="@+id/address"
            android:layout_width="@dimen/txtlayoutW_value"
            android:layout_height="match_parent"
            android:layout_marginBottom="@dimen/txtlayoutMrgTopBot_value"
            android:layout_marginLeft="@dimen/txtlayoutMrgLeft_value"
            android:layout_marginTop="@dimen/txtlayoutMrgTopBot_value"
            android:ems="10"
            android:hint="@string/reg_address"
            android:inputType="textPostalAddress"
            android:paddingTop="@dimen/txtlayoutpadding_value"
            android:textAlignment="center" />

        <EditText
            android:id="@+id/Phone"
            android:layout_width="@dimen/txtlayoutW_value"
            android:layout_height="match_parent"
            android:layout_marginBottom="@dimen/txtlayoutMrgTopBot_value"
            android:layout_marginTop="@dimen/txtlayoutMrgTopBot_value"
            android:layout_marginLeft="@dimen/txtlayoutMrgLeft_value"
            android:textAlignment="center"
            android:paddingTop="@dimen/txtlayoutpadding_value"
            android:ems="10"
            android:inputType="phone"
            android:hint="@string/reg_phone"/>

        <Button
            android:id="@+id/buttonRegister"
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="@dimen/btn_layoutmargin_value"
            android:layout_marginTop="@dimen/btn_layoutmargin_value"
            android:padding="@dimen/txtlayoutpadding_value"
            android:textAlignment="center"
            android:text="@string/Btn_register"
            android:textStyle="bold"
            android:textColor="@color/colorWhite"
            android:background="@color/colorRed"

            />
    </LinearLayout>
</android.support.constraint.ConstraintLayout>